# NumLin

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  README.md  artifact-evaluation-instructions.md  kalman.c  utop_init
csrc/: jbuild  measure_kalman.c
examples/: dune  examples.ml  factorial.lt  generate.ml  jbuild  kalman.h  kalman.lt  kalman.ml  l1_norm_min.lt  l1_norm_min.ml  lin_reg.lt  lin_reg.ml  python_compile.ml  square.lt  sum_array.lt  weighted_avg_infer.lt
examples/lib/: bind.ml  dune  jbuild
old/: ast.ml  ast.mli  check_monad.ml  check_monad.mli  checker.ml  combinators.ml  jbuild  lexer.mll  parser.mly  proto_comb.ml  template.ml
old/src/: ast.ml  ast.mli  check_monad.ml  checker.ml  dune  parser.mly  parser_utils.ml  state_or_error.ml  state_or_error.mli
oldtest/: ast_test.ml  checker_test.ml  combinators_test.ml  jbuild  parser_test.ml  test.ml
src/: ast.ml  ast.mli  check_monad.ml  check_monad.mli  checker.ml  combinators.ml  combinators.mli  dune  error_msg.ml  jbuild  lexer.mll  parse.ml  parse.mli  parser.messages  parser.mly  proto_comb.ml  state_or_error.ml  state_or_error.mli  sugar.ml  sugar.mli  template.ml  template.mli  transpile.ml  transpile.mli  utop.sh
test/: ast_test.ml  check_monad_test.ml  checker_test.ml  combinators_test.ml  dune  examples_test.ml  jbuild  kalman_test.ml  l1_norm_min_test.ml  lin_reg_test.ml  parser_test.ml  test.ml  vars.ml
write-up/: Makefile  abstract.tex  artifact-evaluation-instructions.md  background.tex  conclusion.tex  declaration.tex  default.nix  dissertation.tex  eval_data.tex  (+28 more)
(+77 files in other folders)
